@@ -2,7 +2,7 @@
 # AgentTicketBulk.dtl - provides HTML form for bulk mask
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketBulk.dtl,v 1.35 2010-06-21 14:20:07 mg Exp $
+# $Id: AgentTicketBulk.dtl,v 1.36 2010-07-01 09:57:38 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -69,7 +69,9 @@ function SpellCheckSubmit() {
             </div>
 
             <div class="Content">
-                $Data{"TicketIDHidden"}
+<!-- dtl:block:UsedTicketID -->
+                <input type="hidden" name="TicketID" value="$QData{"TicketID"}" />
+<!-- dtl:block:UsedTicketID -->
                 <fieldset class="TableLike">
                     <label for="Subject">$Text{"Subject"}:</label>
                     <div class="Field">
